DeploymentAppWeb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-web
  labels:
    app: dotnet-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: dotnet-web
    spec:
      containers:
      - name: dotnet-web
        image: chenchi77/dotnet-core-web:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: dotnet-web-config
          mountPath: /Config
        ports:
        - containerPort: 80
      volumes:
      - name: varlog
        emptyDir: {}
      - name: dotnet-web-config
        configMap:
          name: dotnet-web-config
