backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-web
  labels:
    app: dotnet-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: dotnet-web
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: dotnet-web
    spec:
      containers:
      - name: filebeat
        image: docker.elastic.co/beats/filebeat:6.5.1
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: filebeat-config
          mountPath: /usr/share/filebeat/
      - name: dotnet-web
        image: chenchi77/dotnet-core-web:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: dotnet-web-config
          mountPath: /app/Config/
        ports:
        - containerPort: 80
      volumes:
      - name: varlog
        emptyDir: {}
      - name: dotnet-web-config
        configMap:
          name: dotnet-web-config
      - name: filebeat-config
        configMap:
          name: filebeat-config
