Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-web-service
spec:
  selector:
    app: dotnet-web
  ports:
  - protocol: TCP
    port: 80
