Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dotnet-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.chi
    http:
      paths:
      - path: /dotnet-web
        backend:
          serviceName: dotnet-web
          servicePort: 80
